<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTituloUsuario"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ID Usuario"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNombre"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="nombre usuario"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCelular"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="celular usuario"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCorreo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="correo usuario"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCantAdopcion"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cantidad #"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnContactarUsu"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/btnContactarUsu"
        android:textAllCaps="true"
        android:backgroundTint="@color/red"/>

</LinearLayout>