<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameApp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/gris">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtRazaMascota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/edtEmail"
            android:text="jaimedarlin.sg@gmail.com"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:singleLine="true"
            android:textSize="18sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/red"
        android:textColorHint="@color/gris">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDistritoMascota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/edtPass"
            android:text="123456"
            android:inputType="textPassword"
            android:maxLength="50"
            android:singleLine="true"
            android:textSize="18sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/btnLogin"
        android:textAllCaps="true"
        android:backgroundTint="@color/red"/>

    <TextView
        android:id="@+id/edtOlvidastePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtOlvidastePass"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/btnRegistrarte"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/btnRegistrar"
        android:textAllCaps="true"
        android:backgroundTint="@color/red"/>

</LinearLayout>