<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRestablecer"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/red"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/gris">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtRazaMascota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/edtEmail"
            android:inputType="textEmailAddress"
            android:drawableRight="@drawable/ic_email"
            android:maxLength="50"
            android:singleLine="true"
            android:textSize="18sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/btnRestablecer"
        android:textAllCaps="true"
        android:backgroundTint="@color/red"/>

    <TextView
        android:id="@+id/edtIniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtIniciar"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>