<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegistrarActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRegistrar"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/red"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/gris">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNomMascota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/edtName"
            android:inputType="text"
            android:drawableRight="@drawable/ic_user"
            android:maxLength="50"
            android:singleLine="true"
            android:textSize="18sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/gris">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtRazaMascota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/edtEmail"
            android:inputType="textEmailAddress"
            android:drawableRight="@drawable/ic_email"
            android:maxLength="50"
            android:singleLine="true"
            android:textSize="18sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/gris">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEdadMascota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/edtPhone"
            android:inputType="number"
            android:drawableRight="@drawable/ic_phone"
            android:maxLength="50"
            android:singleLine="true"
            android:textSize="18sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/gris">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTipoMascota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/edtUser"
            android:inputType="text"
            android:drawableRight="@drawable/ic_user"
            android:maxLength="50"
            android:singleLine="true"
            android:textSize="18sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColorHint="@color/gris">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDistritoMascota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/edtPass"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_password"
            android:maxLength="50"
            android:singleLine="true"
            android:textSize="18sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/btnRegistrar"
        android:textAllCaps="true"
        android:backgroundTint="@color/red"/>

</LinearLayout>