<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTituloMascota"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre Mascota"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Raza Mascota"
                android:textSize="15sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnContactar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/btnContactar"
            android:textAllCaps="true"
            android:backgroundTint="@color/red"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Descripcion de Mascota"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEdadMascota"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <TextView
        android:id="@+id/txtEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="# edad"
        android:textSize="15sp"

        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <Button
        android:id="@+id/btnInfoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/btnInfoUsuario"
        android:textAllCaps="true"
        android:backgroundTint="@color/red"/>

</LinearLayout>